--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
+    "jwt-decode": "^3.1.1",
     "lodash": "^4.17.20",
     "ramda": "^0.27.1",
     "react": "^17.0.1",
@@ -20,6 +21,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
     "shortid": "^2.2.16",
+    "validator": "^13.1.17",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
