--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "zoo-project",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
+    "fs": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.1",
     "lodash": "^4.17.20",
     "ramda": "^0.27.1",
@@ -31,7 +35,8 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "server": "npx json-server --watch db.json --port=3001"
+    "server": "json-server --watch src/_services/db.json",
+    "start-auth": "node src/_services/server.js"
   },
   "eslintConfig": {
     "extends": [
@@ -53,6 +58,7 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4"
+    "eslint-plugin-prettier": "^3.1.4",
+    "json-server": "^0.16.2"
   }
 }
