--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.1",
     "lodash": "^4.17.20",
+    "node-sass": "^4.14.1",
     "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
