--- a/package.json
+++ b/package.json
@@ -35,10 +35,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "server": "json-server --watch src/_services/db.json",
-    "start-auth": "node src/_services/server.js"
+    "server": "node src/_services/server.js"
   },
   "eslintConfig": {
     "extends": [
